--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,13 @@
 </head>
 
 <body>
+  <div><h1>Pokedex</h1></div>
+  <div><h1>Search</h1></div>
+  <div>
+    <h1>Image</h1>
+    <h1>Name</h1>
+    <h1>Number</h1>
+  </div>
 </body>
 
 </html>
