setting up json test

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="pokedex">
 
 <head>
   <script src="https://tanks-for-waiting.firebaseapp.com/bower_components/angular/angular.js"></script>
