--- a/app/index.html
+++ b/app/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html ng-app="pokedex">
+<html ng-app="nationalPokedex">
 
 <head>
   <script src="https://tanks-for-waiting.firebaseapp.com/bower_components/angular/angular.js"></script>
-  <script type="text/javascript" src="app.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
 </head>
 
-<body ng-controller="DisplayPokemon as pokemon">
+<body>
   <div><h1>Pokedex</h1></div>
   <div><h1>Search</h1></div>
   <div>
-    <h1>Image</h1>
-    <h1>{{pokemon.pokemon.kanto.name}}</h1>
+    <h1>{{"Hello, Angular!"}}</h1>
+    <h1>Name</h1>
     <h1>Number</h1>
   </div>
 </body>
