--- a/app/index.html
+++ b/app/index.html
@@ -6,13 +6,13 @@
   <script type="text/javascript" src="js/app.js"></script>
 </head>
 
-<body>
+<body ng-controller="DisplayPokemon as pokemon">
   <div><h1>Pokedex</h1></div>
   <div><h1>Search</h1></div>
   <div>
-    <h1>{{"Hello, Angular!"}}</h1>
-    <h1>Name</h1>
-    <h1>Number</h1>
+    <h1>{{pokemon.product.image}}</h1>
+    <h1>{{pokemon.product.name}}</h1>
+    <h1>{{pokemon.product.number}}</h1>
   </div>
 </body>
 
