--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
 <head>
   <script src="https://tanks-for-waiting.firebaseapp.com/bower_components/angular/angular.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
+  <script type="text/javascript" src="js/controllers/display-pokemon-controller.js"></script>
 </head>
 
 <body ng-controller="DisplayPokemon as pokemon">
