--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html ng-app="nationalPokedex">
 
 <head>
-  <script src="https://tanks-for-waiting.firebaseapp.com/bower_components/angular/angular.js"></script>
+  <script src="angular.min.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
   <script type="text/javascript" src="js/controllers/display-pokemon-controller.js"></script>
 </head>
