--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
   <div><h1>Pokedex</h1></div>
   <div><h1>Search</h1></div>
   <div ng-repeat="product in pokemon.products">
-    <h1>{{product.image}}</h1>
+    <img ng-src="{{product.image}}">
     <h1>{{product.name}}</h1>
     <h1>{{product.number}}</h1>
   </div>
