8 bit style font working

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,8 @@
   <script src="angular.min.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
   <script type="text/javascript" src="js/controllers/display-pokemon-controller.js"></script>
+  <link href="fonts/PressStart2P-Regular.ttf" rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body ng-controller="DisplayPokemon as pokemon">
